// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders active 1`] = `
<span
  className="KategorieFilter"
>
  <Button
    active={true}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="KategorieFilter--pěší--active"
    disabled={false}
    onClick={[Function]}
  >
    <PopisekKategorie
      typ="pěší"
    />
  </Button>
</span>
`;

exports[`renders nonactive 1`] = `
<span
  className="KategorieFilter"
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="KategorieFilter--koloběžka--inactive"
    disabled={false}
    onClick={[Function]}
  >
    <PopisekKategorie
      typ="koloběžka"
    />
  </Button>
</span>
`;
